--- a/LiveCamera/LiveCamera/Features/AddDevice/View/GenerateQRCodeViewController.xib
+++ b/LiveCamera/LiveCamera/Features/AddDevice/View/GenerateQRCodeViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -32,7 +32,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZGq-wj-Xqt">
-                    <rect key="frame" x="56" y="435" width="263" height="42"/>
+                    <rect key="frame" x="56" y="450" width="263" height="42"/>
                     <color key="backgroundColor" red="1" green="0.26556895670000003" blue="0.2956471792" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="42" id="DF9-RH-dVy"/>
@@ -40,12 +40,18 @@
                     <state key="normal" title="Add">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds " value="YES"/>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="20"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <action selector="addEvent:" destination="-1" eventType="touchUpInside" id="N7p-bg-QBM"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Verify that the link indicator is displayed correctly" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YbR-4D-rRL">
-                    <rect key="frame" x="82" y="355" width="200" height="40"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Waiting button is selected" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YbR-4D-rRL">
+                    <rect key="frame" x="82" y="350" width="200" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="200" id="0vv-gQ-iu4"/>
                         <constraint firstAttribute="height" constant="40" id="HPz-KJ-GMV"/>
@@ -72,7 +78,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AZm-Uj-zLw">
-                    <rect key="frame" x="16" y="537" width="343" height="118"/>
+                    <rect key="frame" x="16" y="552" width="343" height="118"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tips：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C0F-D5-KyM">
                             <rect key="frame" x="30" y="20" width="42" height="17"/>
@@ -96,17 +102,23 @@
                         <constraint firstItem="C0F-D5-KyM" firstAttribute="leading" secondItem="AZm-Uj-zLw" secondAttribute="leading" constant="30" id="gdC-UD-lws"/>
                         <constraint firstItem="Mwi-I2-Ubq" firstAttribute="leading" secondItem="C0F-D5-KyM" secondAttribute="leading" id="lrQ-CK-1Ab"/>
                     </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds " value="YES"/>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="20"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                 </view>
             </subviews>
             <color key="backgroundColor" red="0.97647058823529409" green="0.97254901960784312" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="xYP-iv-pvp" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="3Wd-Hr-RhX"/>
                 <constraint firstItem="YbR-4D-rRL" firstAttribute="leading" secondItem="VS1-yK-PeA" secondAttribute="trailing" constant="10" id="66r-mV-GEi"/>
-                <constraint firstItem="YbR-4D-rRL" firstAttribute="top" secondItem="VS1-yK-PeA" secondAttribute="top" constant="-5" id="Iqn-dX-3DL"/>
+                <constraint firstItem="YbR-4D-rRL" firstAttribute="top" secondItem="VS1-yK-PeA" secondAttribute="top" constant="-10" id="Iqn-dX-3DL"/>
                 <constraint firstItem="xYP-iv-pvp" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="25" id="Moe-xT-x3V"/>
                 <constraint firstItem="ZGq-wj-Xqt" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="TjH-yR-eaa"/>
                 <constraint firstItem="VS1-yK-PeA" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="56" id="edc-6Y-zzq"/>
-                <constraint firstItem="ZGq-wj-Xqt" firstAttribute="top" secondItem="YbR-4D-rRL" secondAttribute="bottom" constant="40" id="hX5-2V-5vD"/>
+                <constraint firstItem="ZGq-wj-Xqt" firstAttribute="top" secondItem="YbR-4D-rRL" secondAttribute="bottom" constant="60" id="hX5-2V-5vD"/>
                 <constraint firstItem="ZGq-wj-Xqt" firstAttribute="leading" secondItem="VS1-yK-PeA" secondAttribute="leading" id="mwT-HU-Rgl"/>
                 <constraint firstItem="VS1-yK-PeA" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="340" id="nEz-FP-1Tu"/>
                 <constraint firstItem="AZm-Uj-zLw" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="pDK-B9-jHq"/>
